mdapioutput/objects/Matrix__c.object
<CustomObject>
    <label>Matrix</label>
    <nameField>
        <displayFormat>M-{00000}</displayFormat>
        <label>Matrix name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matrixes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>Matrix</fullName>
        <active>true</active>
        <label>Matrix</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mobile_Matrix</fullName>
        <active>false</active>
        <label>Mobile Matrix</label>
    </recordTypes>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>